# darknet

./: CMakeLists.txt  Makefile
cfg/: tiny-yolo-voc.cfg  voc.data  yolo-voc.cfg
examples/: detector.c
include/: darknet.h  darknet.hpp
src/: cuda.c  demo.c  detection_layer.c
